--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="timer">
     <a href="https://www.youtube.com/@w4vesfm" target="_blank">
-      <img src="./lg.png" alt="LG Logo" style="max-width: 200px; margin-bottom: 20px;">
+      <img src="./lg.png" alt="LG Logo" class="glitch-image" data-alt-src="./lg2.png" style="max-width: 200px; margin-bottom: 20px;">
     </a>
     <div style="text-align: center; margin-bottom: 10px; color: #fff; font-size: 12px;">???</div>
     <div class="timer--clock">
