--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Majowka</title>
+  <title>???</title>
   <script>
-    const titles = ['Majowka', 'Coming Soon', 'WavesFM'];
+    const titles = ['???', '01.05.2025', 'Coming Soon', 'WavesFM'];
     let currentTitleIndex = 0;
     
     function updateTitle() {
@@ -13,7 +13,7 @@
       document.title = titles[currentTitleIndex];
     }
     
-    setInterval(updateTitle, 2000); // Change title every 2 seconds
+    setInterval(updateTitle, 500); // Change title every 2 seconds
   </script>
   <link href='https://fonts.googleapis.com/css?family=Arimo:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://public.codepenassets.com/css/normalize-5.0.0.min.css">
@@ -37,7 +37,7 @@
     <a href="https://www.youtube.com/@w4vesfm" target="_blank">
       <img src="./lg.png" alt="LG Logo" class="glitch-image" data-alt-src="./lg2.png" style="max-width: 200px; margin-bottom: 20px;">
     </a>
-    <div id="animated-text" style="text-align: center; margin-bottom: 10px; color: #fff; font-size: 12px;">Majowka</div>
+    <div id="animated-text" style="text-align: center; margin-bottom: 10px; color: #fff; font-size: 12px;">???</div>
     <script>
       const textElement = document.getElementById('animated-text');
       const textTitles = ['???'];
