--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>???</title>
   <script>
     const titles = ['???', '01.05.2025', 'Coming Soon', 'WavesFM'];
@@ -30,12 +30,12 @@
   </div>
   <div class="loading-screen">
     <div class="loading-image">
-      <img src="./wave.png" alt="Wave Logo">
+      <img src="./wave.png" alt="Wave Logo" style="width: min(200px, 50vw); height: auto;">
     </div>
   </div>
   <div class="timer">
     <a href="https://www.youtube.com/@w4vesfm" target="_blank">
-      <img src="./lg.png" alt="LG Logo" class="glitch-image" data-alt-src="./lg2.png" style="max-width: 200px; margin-bottom: 20px;">
+      <img src="./lg.png" alt="LG Logo" class="glitch-image" data-alt-src="./lg2.png" style="max-width: min(200px, 50vw); margin-bottom: clamp(10px, 4vw, 20px);">
     </a>
     <div id="animated-text" style="text-align: center; margin-bottom: 10px; color: #fff; font-size: 12px;">???</div>
     <script>
