--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./glitch.css">
   <link rel="stylesheet" href="./flash.css">
-</head>
+<!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '1403897');
+</script>
+<!-- End MailerLite Universal -->
+    </head>
 <body>
   <div class="warning-overlay" id="warningOverlay">
     <div class="warning-content">
